--- a/views/default/global/footer.tpl.htm
+++ b/views/default/global/footer.tpl.htm
@@ -5,7 +5,7 @@
 		<img src="https://cdn.bootcss.com/emojione/2.2.5/assets/png/2764.png"> Amazing EveryThing. 
 	</p>
 	<hr style="border:0;border-top:1px dashed #edeff3 ">
-	<p>Copyright  © 2009 - 2017 <a href="https://amazinggrace.cc/"> AmazingGrace.cc </a>  All Rights  Reserved · <a href="http://www.miibeian.gov.cn/" target="_blank">粤ICP备15076966号-1</a>
+	<p>Copyright  © 2009 - 2017 <a href="https://github.com/eoen/WeCenter-EOEN-Template"> WeCenter-EOEN-Template </a>  All Rights  Reserved · <a href="http://www.miibeian.gov.cn/" target="_blank">粤ICP备15076966号-1</a>
 	</p>
 	<p> 
 		Powered  BY <a href="http://www.wecenter.com/" target="_blank">WeCenter</a>   &amp;   Web System BY <a href="https://lnmp.org/" target="_blank">LNMP 1.4</a></a>
